# E2B-hackathon-datalyzer

./: .gitignore  LICENSE  README.md  deploy.py  pyproject.toml  test_e2b.py
.cursor/rules/: ignore-dotenv.mdc  use-uv.mdc
scripts/: create_sample_pickle.py  generate_data_overwhelm_image.py  generate_image.py  generate_sample_pickles.py  generate_workflow_image.py
src/e2b_hackathon/: __init__.py  dash_app.py  execute_code_with_data.py  pickle_analyzer.py
