[project]
name = "e2b-hackathon"
version = "0.1.0"
description = "Analyze pickle files using E2B sandbox"
readme = "README.md"
authors = [
    { name = "Simon Podhajsky", email = "simon.podhajsky@gmail.com" },
    { name = "Marek Miltner", email = "marek.miltner@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "e2b-code-interpreter>=1.1.1",
    "python-dotenv>=1.0.1",
    "numpy>=1.25.0",
    "pandas>=2.0.0",
    "pandas-stubs>=2.2.3.250308",
    "dash>=3.0.0",
    "dash-bootstrap-components>=2.0.0",
    "plotly>=6.0.0",
    "structlog>=25.2.0",
    "pyarrow>=19.0.1",
    "fastparquet>=2024.11.0",
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "openai>=1.68.2",
]

[project.scripts]
e2b-hackathon = "e2b_hackathon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
